--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.m4main.acs</groupId>
-    <artifactId>amf</artifactId>
+    <groupId>acs</groupId>
+    <artifactId>pcap2amr</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -83,7 +83,7 @@
                             <finalName>mrud</finalName>
                             <archive>
                                 <manifest>
-                                    <mainClass>x3.player.mru.App</mainClass>
+                                    <mainClass>rtp2amr</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
@@ -122,7 +122,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>x3.player.mru.App</mainClass>
+                            <mainClass>rtp2amr</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
